modified findNearby method and NearbyLocationDto class